--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ nav{
     width: 100%;
     height: 17.03838rem;
     border-radius: 1.25rem;
-    background: url(/asset/bulb.png), lightgray 50% / cover no-repeat;
+    background: url(asset/bulb.png), lightgray 50% / cover no-repeat;
     flex-shrink: 0;
 }
 
